[B]Version 1.0.3[/B]
- Use danishaddons module version 1.0.1

[B]Version 1.0.2[/B]
- Changed how video URLs is resolved to make it a blocking operation in XBMC, thereby avoid the user selecting multiple videos at once.
- Changed how the video clip date is displayed in the lists
- Fixed sorting

[B]Version 1.0.1[/B]
- Check for cancelled progress dialog while downloading playlist

[B]Version 1.0.0[/B]
- Updated to use script.module.simplejson
- Display progressbar while loading playlist

[B]Version 0.1.2[/B]
- Now uses library module for Danish addons
- Added support for geo protected video clips such as Tour de France

[B]Version 0.1.1[/B]
- Fix loading on Windows

[B]Version 0.1.0[/B]
- Initial version
- Some videos are not working, because the playlist retrieved contains an invalid video file link.[CR]I am investigating