@@ -1,3 +1,6 @@
+[B]Version 1.0.4[/B]
+- Use danishaddons module version 1.1.0
+
 [B]Version 1.0.3[/B]
 - Use danishaddons module version 1.0.1
 
